RbA Build/src/objects/Product_Configuration__c.object
<CustomObject>
    <description>Holds the product configuration settings like picklist values and makeability rules for a product.</description>
    <fields>
        <fullName>Astragal_Control__c</fullName>
        <description>Controls whether Astragal is required, enabled, or disabled for this product configuration.</description>
        <inlineHelpText>Controls whether Astragal is required, enabled, or disabled for this product configuration.</inlineHelpText>
        <label>Astragal Control</label>
        <picklist>
            <picklistValues>
                <fullName>Disabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Astragal__c</fullName>
        <description>Select the Astragal Colors that should be made available for selection in the product configuration page.</description>
        <inlineHelpText>Select the Astragal Colors that should be made available for selection in the product configuration page.</inlineHelpText>
        <label>Astragal</label>
        <picklist>
            <picklistValues>
                <fullName>White</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sandtone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terratone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canvas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cocoa Bean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dark Bronze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forest Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red Rock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>BM_Applied_Control__c</fullName>
        <description>Controls whether BM Applied is required, enabled, or disabled for this product configuration.</description>
        <inlineHelpText>Controls whether BM Applied is required, enabled, or disabled for this product configuration.</inlineHelpText>
        <label>BM Applied</label>
        <picklist>
            <picklistValues>
                <fullName>Disabled</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BM_Location_Control__c</fullName>
        <description>Controls whether BM Location is required, enabled, or disabled for this product configuration.</description>
        <inlineHelpText>Controls whether BM Location is required, enabled, or disabled for this product configuration.</inlineHelpText>
        <label>BM Location</label>
        <picklist>
            <picklistValues>
                <fullName>Disabled</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Breather_Tubes_Control__c</fullName>
        <description>Controls whether Breather Tubes is required, enabled, or disabled for this product configuration.</description>
        <inlineHelpText>Controls whether Breather Tubes is required, enabled, or disabled for this product configuration.</inlineHelpText>
        <label>Breather Tubes</label>
        <picklist>
            <picklistValues>
                <fullName>Disabled</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Brickmould_Location__c</fullName>
        <description>Select the Brickmould Locations that should be made available for selection in the product configuration page.</description>
        <inlineHelpText>Select the Brickmould Locations that should be made available for selection in the product configuration page.</inlineHelpText>
        <label>Brickmould Location</label>
        <picklist>
            <picklistValues>
                <fullName>All Sides</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arch Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Sill</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Casing_Location_Control__c</fullName>
        <description>Controls whether Casing Location is required, enabled, or disabled for this product configuration.</description>
        <inlineHelpText>Controls whether Casing Location is required, enabled, or disabled for this product configuration.</inlineHelpText>
        <label>Casing Location</label>
        <picklist>
            <picklistValues>
                <fullName>Disabled</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Casing_Location__c</fullName>
        <description>Select the Casing Locations that should be made available for selection in the product configuration page.</description>
        <inlineHelpText>Select the Casing Locations that should be made available for selection in the product configuration page.</inlineHelpText>
        <label>Casing Location</label>
        <picklist>
            <picklistValues>
                <fullName>All Sides</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arch Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Sill</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Casing_Profile_Control__c</fullName>
        <description>Controls whether Casing Profile is required, enabled, or disabled for this product configuration.</description>
        <inlineHelpText>Controls whether Casing Profile is required, enabled, or disabled for this product configuration.</inlineHelpText>
        <label>Casing Profile</label>
        <picklist>
            <picklistValues>
                <fullName>Disabled</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Casing_Profile__c</fullName>
        <description>Select the Casing Profiles that should be made available for selection in the product configuration page.</description>
        <inlineHelpText>Select the Casing Profiles that should be made available for selection in the product configuration page.</inlineHelpText>
        <label>Casing Profile</label>
        <picklist>
            <picklistValues>
                <fullName>WM324</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WM351</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WM361</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WM366</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WM444</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WM445</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WM356</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S332</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Casing_Species_Control__c</fullName>
        <description>Controls whether Casing Species is required, enabled, or disabled for this product configuration.</description>
        <inlineHelpText>Controls whether Casing Species is required, enabled, or disabled for this product configuration.</inlineHelpText>
        <label>Casing Species</label>
        <picklist>
            <picklistValues>
                <fullName>Disabled</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Casing_Species__c</fullName>
        <description>Select the Casing Species that should be made available for selection in the product configuration page.</description>
        <inlineHelpText>Select the Casing Species that should be made available for selection in the product configuration page.</inlineHelpText>
        <label>Casing Species</label>
        <picklist>
            <picklistValues>
                <fullName>Maple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oak</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Checkrail_Style_Control__c</fullName>
        <description>Controls whether Checkrail Style is required, enabled, or disabled for this product configuration.</description>
        <inlineHelpText>Controls whether Checkrail Style is required, enabled, or disabled for this product configuration.</inlineHelpText>
        <label>Checkrail Style Control</label>
        <picklist>
            <picklistValues>
                <fullName>Disabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Checkrail_Style__c</fullName>
        <description>Select the checkrail styles that should be made available for selection in the product configuration page.</description>
        <inlineHelpText>Select the checkrail styles that should be made available for selection in the product configuration page.</inlineHelpText>
        <label>Checkrail Style</label>
        <picklist>
            <picklistValues>
                <fullName>Traditional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contemporary</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Colonial_Grille_Lites_High__c</fullName>
        <description>Select the number of colonial grille lites high that should be made available for selection in the product configuration page.</description>
        <inlineHelpText>Select the number of colonial grille lites high that should be made available for selection in the product configuration page.</inlineHelpText>
        <label>Colonial Grille Lites High</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Colonial_Grille_Lites_Wide__c</fullName>
        <description>Select the number of colonial grille lites wide that should be made available for selection in the product configuration page.</description>
        <inlineHelpText>Select the number of colonial grille lites wide that should be made available for selection in the product configuration page.</inlineHelpText>
        <label>Colonial Grille Lites Wide</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Corrosion_Resistant_Control__c</fullName>
        <description>Controls whether Corrosion Resistant Hardware is required, enabled, or disabled for this product configuration.</description>
        <inlineHelpText>Controls whether Corrosion Resistant Hardware is required, enabled, or disabled for this product configuration.</inlineHelpText>
        <label>Corrosion Resistant</label>
        <picklist>
            <picklistValues>
                <fullName>Disabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Custom_Grille_Details_Control__c</fullName>
        <description>Controls whether Custom Grille Details is required, enabled, or disabled for this product configuration.</description>
        <inlineHelpText>Controls whether Custom Grille Details is required, enabled, or disabled for this product configuration.</inlineHelpText>
        <label>Custom Grille Details</label>
        <picklist>
            <picklistValues>
                <fullName>Disabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Drip_Cap_Pieces_Control__c</fullName>
        <description>Controls whether Drip Cap Pieces is required, enabled, or disabled for this product configuration.</description>
        <inlineHelpText>Controls whether Drip Cap Pieces is required, enabled, or disabled for this product configuration.</inlineHelpText>
        <label>Drip Cap Pieces</label>
        <picklist>
            <picklistValues>
                <fullName>Disabled</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Drip_Cap_Pieces__c</fullName>
        <description>Select the drip cap pieces selections that should be made available for selection in the product configuration page.</description>
        <inlineHelpText>Select the drip cap pieces selections that should be made available for selection in the product configuration page.</inlineHelpText>
        <label>Drip Cap Pieces</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>EJ_Color_Control__c</fullName>
        <description>Controls whether EJ Color is required, enabled, or disabled for this product configuration.</description>
        <inlineHelpText>Controls whether EJ Color is required, enabled, or disabled for this product configuration.</inlineHelpText>
        <label>EJ Color</label>
        <picklist>
            <picklistValues>
                <fullName>Disabled</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EJ_Color__c</fullName>
        <description>Select the EJ Colors that should be made available for selection in the product configuration page.</description>
        <inlineHelpText>Select the EJ Colors that should be made available for selection in the product configuration page.</inlineHelpText>
        <label>EJ Color</label>
        <picklist>
            <picklistValues>
                <fullName>White</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canvas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terratone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sandtone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NT?</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>EJ_Frame_Control__c</fullName>
        <description>Controls whether Extension Jamb (EJ) Receiver Frame is required, enabled, or disabled for this product configuration.</description>
        <inlineHelpText>Controls whether Extension Jamb Receiver Frame (EJ) is required, enabled, or disabled for this product configuration.</inlineHelpText>
        <label>EJ Frame</label>
        <picklist>
            <picklistValues>
                <fullName>Disabled</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EJ_Species_Control__c</fullName>
        <description>Controls whether EJ Species is required, enabled, or disabled for this product configuration.</description>
        <inlineHelpText>Controls whether EJ Species is required, enabled, or disabled for this product configuration.</inlineHelpText>
        <label>EJ Species</label>
        <picklist>
            <picklistValues>
                <fullName>Disabled</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EJ_Species__c</fullName>
        <description>Select the EJ Species that should be made available for selection in the product configuration page.</description>
        <inlineHelpText>Select the EJ Species that should be made available for selection in the product configuration page.</inlineHelpText>
        <label>EJ Species</label>
        <picklist>
            <picklistValues>
                <fullName>Pine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oak</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>EJ_Thickness_Control__c</fullName>
        <description>Controls whether EJ Thickness is required, enabled, or disabled for this product configuration.</description>
        <inlineHelpText>Controls whether EJ Thickness is required, enabled, or disabled for this product configuration.</inlineHelpText>
        <label>EJ Thickness</label>
        <picklist>
            <picklistValues>
                <fullName>Disabled</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EJ_Thickness__c</fullName>
        <description>Select the EJ Thicknesses that should be made available for selection in the product configuration page.</description>
        <inlineHelpText>Select the EJ Thicknesses that should be made available for selection in the product configuration page.</inlineHelpText>
        <label>EJ Thickness</label>
        <picklist>
            <picklistValues>
                <fullName>5/4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4/4</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>EJ_Wall_Depth_Control__c</fullName>
        <description>Controls whether EJ Wall Depth is required, enabled, or disabled for this product configuration.</description>
        <inlineHelpText>Controls whether EJ Wall Depth is required, enabled, or disabled for this product configuration.</inlineHelpText>
        <label>EJ Wall Depth</label>
        <picklist>
            <picklistValues>
                <fullName>Disabled</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EJ_Wall_Depth__c</fullName>
        <description>Select the EJ Wall Depths that should be made available for selection in the product configuration page.</description>
        <inlineHelpText>Select the EJ Wall Depths that should be made available for selection in the product configuration page.</inlineHelpText>
        <label>EJ Wall Depth</label>
        <picklist>
            <picklistValues>
                <fullName>4 9/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 9/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Exterior_Color_Control__c</fullName>
        <description>Controls whether Exterior Color is required, enabled, or disabled for this product configuration.</description>
        <inlineHelpText>Controls whether Exterior Color is required, enabled, or disabled for this product configuration.</inlineHelpText>
        <label>Exterior Color</label>
        <picklist>
            <picklistValues>
                <fullName>Disabled</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Exterior_Color__c</fullName>
        <description>The exterior color</description>
        <inlineHelpText>The exterior color</inlineHelpText>
        <label>Exterior Color</label>
        <picklist>
            <picklistValues>
                <fullName>White</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Canvas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sandtone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terratone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cocoa Bean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forest Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red Rock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dark Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Exterior_Grille_Color__c</fullName>
        <description>Select the Exterior Grille Colors that should be made available for selection in the product configuration page.</description>
        <inlineHelpText>Select the Exterior Grille Colors that should be made available for selection in the product configuration page.</inlineHelpText>
        <label>Exterior Grille Color</label>
        <picklist>
            <picklistValues>
                <fullName>White</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sandtone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terratone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canvas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cocoa Bean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dark Bronze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forest Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red Rock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Exterior_Trim_Color__c</fullName>
        <description>Select the Exterior Trim Color that should be made available for selection in the product configuration page.</description>
        <inlineHelpText>Select the Exterior Trim Color that should be made available for selection in the product configuration page.</inlineHelpText>
        <label>Exterior Trim Color</label>
        <picklist>
            <picklistValues>
                <fullName>White</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sandtone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terratone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canvas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cocoa Bean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dark Bronze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forest Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red Rock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Exterior_Trim_Control__c</fullName>
        <description>Controls whether Exterior Trim is required, enabled, or disabled for this product configuration.</description>
        <inlineHelpText>Controls whether Exterior Trim is required, enabled, or disabled for this product configuration.</inlineHelpText>
        <label>Exterior Trim</label>
        <picklist>
            <picklistValues>
                <fullName>Disabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Exterior_Trim__c</fullName>
        <description>The exterior trim options available for this product configuration.</description>
        <inlineHelpText>The exterior trim options available for this product configuration.</inlineHelpText>
        <label>Exterior Trim</label>
        <picklist>
            <picklistValues>
                <fullName>Brickmould - Picture Frame</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brickmould - Traditional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overfit Brickmould</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overfit Chamfered Edge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overfit Flange</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Fibrex_L_Trim_Control__c</fullName>
        <description>Controls whether Fibrex L-Trim is required, enabled, or disabled for this product configuration.</description>
        <inlineHelpText>Controls whether Fibrex L-Trim is required, enabled, or disabled for this product configuration.</inlineHelpText>
        <label>Fibrex L-Trim</label>
        <picklist>
            <picklistValues>
                <fullName>Disabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Finger_Lifts_Control__c</fullName>
        <description>Controls whether Finger Lifts is required, enabled, or disabled for this product configuration.</description>
        <inlineHelpText>Controls whether Finger Lifts is required, enabled, or disabled for this product configuration.</inlineHelpText>
        <label>Finger Lifts</label>
        <picklist>
            <picklistValues>
                <fullName>Disabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Finger_Lifts__c</fullName>
        <description>Select the number of finger lifts that should be made available for selection in the product configuration page.</description>
        <inlineHelpText>Select the number of finger lifts that should be made available for selection in the product configuration page.</inlineHelpText>
        <label>Finger Lifts</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Frame_Type_Control__c</fullName>
        <description>Controls whether Frame Type is required, enabled, or disabled for this product configuration.</description>
        <inlineHelpText>Controls whether Frame Type is required, enabled, or disabled for this product configuration.</inlineHelpText>
        <label>Frame Type Control</label>
        <picklist>
            <picklistValues>
                <fullName>Disabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>